feature: new background pattern

--- a/src/sass/base/_buttons.scss
+++ b/src/sass/base/_buttons.scss
@@ -52,7 +52,8 @@
 		@include clr('black');
 
 		&:hover {
-			@include bg('black-lightest');
+			@include bg('black');
+			@include clr('white');
 		}
 
 		&.btn--inverse {
