--- a/src/sass/modules/_hero.scss
+++ b/src/sass/modules/_hero.scss
@@ -1,24 +1,38 @@
 .hero {
-	@include bg('green');
+	@include bg('black');
 	@include p('h', 'xl');
-	background-image: url('/img/grass-1.jpg');
-	padding-top: 40vh;
-	display          : block;
-	height           : 100vh;
-	width            : 100%;
-	position         : relative;
-	text-align: center;
+	background-image     : url('/img/grass-1.jpg');
+	padding-top          : 40vh;
+	display              : block;
+	height               : 100vh;
+	width                : 100%;
+	position             : relative;
+	text-align           : center;
+	background-position-x: 50%;
+	background-size      : 1610px;
+	//TODO make this a mixin
 
 	&__text {
 		@include text('xxl');
 		@include clr('white');
 		@include font('light');
+		@include p('v', 'l');
+		@include m('b', 'n');
+		background: -moz-linear-gradient(left, rgba(51,51,51,0) 0%, rgba(51,51,51,1) 50%, rgba(125,185,232,0) 100%); /* FF3.6-15 */
+		background: -webkit-linear-gradient(left, rgba(51,51,51,0) 0%,rgba(51,51,51,1) 50%,rgba(125,185,232,0) 100%); /* Chrome10-25,Safari5.1-6 */
+		background: linear-gradient(to right, rgba(51,51,51,0) 0%,rgba(51,51,51,1) 50%,rgba(125,185,232,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00333333', endColorstr='#007db9e8',GradientType=1 ); /* IE6-9 */
 	}
 
 	&__leader {
 		@include clr('white');
 		@include font('light');
+		@include p('v', 'm');
 		max-width: 100%;
+		background: -moz-linear-gradient(left, rgba(51,51,51,0) 0%, rgba(51,51,51,1) 50%, rgba(125,185,232,0) 100%); /* FF3.6-15 */
+		background: -webkit-linear-gradient(left, rgba(51,51,51,0) 0%,rgba(51,51,51,1) 50%,rgba(125,185,232,0) 100%); /* Chrome10-25,Safari5.1-6 */
+		background: linear-gradient(to right, rgba(51,51,51,0) 0%,rgba(51,51,51,1) 50%,rgba(125,185,232,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00333333', endColorstr='#007db9e8',GradientType=1 ); /* IE6-9 */
 	}
 
 	&__cta {
