feature: added .box-{size} as a utility class, added bg to footer

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -24,6 +24,7 @@
 @import "./base/_progress";
 @import "./base/_input";
 @import "./base/_buttons";
+@import "./base/shadow";
 @import "./modules/_logo";
 @import "./modules/_hero";
 @import "./modules/_footer";
