--- a/src/sass/modules/_footer.scss
+++ b/src/sass/modules/_footer.scss
@@ -3,6 +3,9 @@
 	@include clr('white');
 	@include p('h', 'xl');
 	@include p('t', 'xxl');
+	background-image: url('/assets/img/bg-bw-5.svg');
+	background-size: 150px;
+	background-position-x: 50%;
 
 	.col {
 		@include m('b', 'xl');
